# Hackathon-Phase-1-Todo-Console-App

./: .gitignore  README.md  pyproject.toml
.specify/memory/: constitution.md
history/prompts/001-console-todo/: 2-console-todo-spec.spec.prompt.md  3-console-todo-plan.plan.prompt.md  4-console-todo-tasks.tasks.prompt.md  5-console-todo-implementation.red.prompt.md
history/prompts/constitution/: 1-initial-constitution.constitution.prompt.md
specs/001-console-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-todo/checklists/: requirements.md
specs/001-console-todo/contracts/: cli-contracts.md
src/cli/: main.py
src/models/: todo.py
src/services/: todo_service.py
tests/integration/: test_cli.py
tests/unit/: test_todo.py  test_todo_service.py
